--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <speedment.version>3.0.9</speedment.version>
+        <speedment.version>3.0.10-SNAPSHOT</speedment.version>
 <!--        <speedment.enterprise.version>1.1.6</speedment.enterprise.version>-->
         <db.groupId>mysql</db.groupId>
         <db.artifactId>mysql-connector-java</db.artifactId>
